[project]
name = "notice-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "richardSHkim", email = "kshtrue95@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
notice-me = "notice_me:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "ruff>=0.12.12",
]
