[project]
name = "alert-helper"
version = "0.1.6"
description = "Simple python notification helper."
readme = "README.md"
authors = [
    { name = "richardSHkim", email = "kshtrue95@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/richardSHkim/alert-helper"

[project.scripts]
alert-helper = "alert_helper:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "ruff>=0.12.12",
    "twine>=6.2.0",
]
